@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.0.62 - 2015-01-14
 
 CHANGES IN V1.0.63
 
+	- foomatic-rip: Added a symlink of the filter to the binary executable
+	  directory (usually /usr/bin), so that LSB compliance test scripts
+	  work (Bug #1255).
 	- cups-browsed: Fixed CUPS Browsing timeouts. Thanks to Tim
           Waugh from Red Hat for the patch (Bug #1252, Red Hat bug
           #1189254).
